Release 2.7.0
=============



Release 2.6.1
=============

Bugs fixed
----------

- Typo in function name emitting warnings at build time (issue #283)
 
- The conversion of `TaggedList` instances is now handling the names
  of items in the list (issue #286)


Changes
-------

- Loading the `ipython` extension in the absence of `pandas` or `numpy`
  is now issuing a warning (issue #279)
  
  
Release 2.6.0
=============

New features
------------

- Report the existence during build time of a file `.Renviron`,
  or the definition of the environment variables `R_ENVIRON' or
  `R_ENVIRON_USER` with a warning. (issue #204)

- Moved console writting callback to use `ptr_R_WriteConsoleEx`
  rather than `ptr_R_WriteConsole`. This allows callbacks
  for warnings and messages. `get/set_writeconsole` is now 
  replaced by `get/set_writeconsole_regular` (regular
  output) and `get/set_writeconsole_warnerror` (warning and error).
  In order to conserve backward compatibility an alias for
  `get/set_writeconsole_regular` called `get/set_writeconsole` is
  provided.

- Added callback for `ptr_R_ResetConsole`.

- :mod:`pandas` :class:`Categorical` objects are automatically handled
  in the pandas converter.

- The translation of R symbols into Python symbols used in `importr` and
  underlying classes and methods can be customized with a callback.
  The default translation turning `.` into `_` is `default_symbol_r2python`.

- Translation of named arguments in R function is now sharing code with the
  translation of R symbols (see point above), providing a consistent way to
  perform translations.

- Utility function `sequence_to_vector` in `robjects` to convert Python
  sequences (e.g., `list` or `tuple`) to R vector without having to
  specify the type (the type is inferred from the list).

- :mod:`robjects.vectors` object have a property :attr:`NAvalue` that contains
  the `NA` value for the vector, allowing generic code on R vectors.